--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
 </head>
 <body>
         <div class="topnav">
-                <nav class="navbar navbar-expand-lg navbar-primary bg-light">
-                  <a class="navbar-brand  justify-content-start" href="#">
-                      <img src="imgesS/EduFirst.png" width="100" height="50" class="d-inline-block align-top" alt="">
-                     <div class="text-center"> EduFirst</div></a>
-                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                   <span class="navbar-toggler-icon"></span>
-                    </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">  
-                  
-                                <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                                <a class="nav-item nav-link" href="About.html">About</a>
-                                <a class="nav-item nav-link" href="Contact.html">Contact</a><form class="form-inline my-2 my-lg-0">
-                                <button class="btn btn-outline-danger my-2 my-sm-0  justify-content-end" type="submit">DONATE</button>
-                              </form>
-                            </div>
+            <nav class="navbar navbar-expand-md navbar-primary bg-light align-items-center">
+                <a class="navbar-brand  justify-content-center" href="#">
+                    <img src="imgesS/EduFirst.png" width="100px" height="50px" class="d-inline-block align-top" alt="">
+                   <div class="text-center"> EduFirst</div></a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                          </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                  <div class="navbar-nav text-uppercase">  
+                
+                              <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                              <a class="nav-item nav-link" href="About.html">About</a>
+                              <a class="nav-item nav-link" href="Contact.html">Contact</a><form class="form-inline my-2 my-lg-0">
+                              <button class="btn btn-outline-danger my-2 my-sm-0  justify-content-end" type="submit">DONATE</button>
+                            </form>
                           </div>
-                         </nav>
-                         </div>
+                        </div>
+            </nav>      
+          </div>
   <div class="container">
         <div class="row">
                 <section >
