--- a/about.html
+++ b/about.html
@@ -1,40 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="./project folder/CSS/bootstrap.css">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="CSS/bootstrap4.xcss">
+  <link rel="stylesheet" href="bootstrap4/css/bootstrap.css">
+
+  <title>EDUFIRST</title>
 </head>
 <body>
-    <div class="topnav">
-        <nav>
-                <ul>
-                        <a href="index.html" class="active"><li>Home</li></a>
-                        <a href="About.html"><li>About</li></a>
-                        <a href="Contact.html"><li>Contact</li></a>
-
-                </ul>      
-        </nav>            
-  </div>
-  <div>
-    <h3>About us</h3>
-    <img src="./imgesS/sharing books.jpg" alt="" height="400px" width="1000px">
-    <p div class="container">
-      EDUFIRST is poised to bringing about tangible change in the lives of children in 
-    undeserved communities by providing educational materials for learning. We partner
-  with donor organizations in a bid to increase awareness of this foundation,thereby
-  supporting these undeserved communities. Our goal is to see that every child has an 
-   oppurtunity to learn.
-   <!-- supporting government -->
-    </p>
-
-  </div><hr>
+    <div class="container">
+        <nav class="navbar navbar-expand-md navbar-primary bg-light align-items-center">
+            <a class="navbar-brand  justify-content-center" href="index.html">
+                <img src="imgesS/EduFirst.png" width="100px" height="50px" class="d-inline-block align-top" alt="">
+               <div class="text-center"> EduFirst</div></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                      </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav text-uppercase">  
+            
+                          <a class="nav-item nav-link" href="index.html">Home </a>
+                          <a class="nav-item nav-link active" href="#">About
+                              <span class="sr-only">(current)</span>
+                          </a>
+                          <a class="nav-item nav-link" href="Contact.html">Contact</a><form class="form-inline my-2 my-lg-0">
+                          <button class="btn btn-outline-danger my-2 my-sm-0  justify-content-end" type="submit">DONATE</button>
+                        </form>
+                      </div>
+                    </div>
+        </nav>      
+         <br />
+         <br />
+        <div class="m-auto">
+              <div class="display-2 text-center text-primary"> <h3>About us</h3> </div>
+                <br />
+              <img src="imgesS/sharing books.jpg" alt="" height="400px" width="1000px">
+              <p div class="container">
+                EDUFIRST is poised to bringing about tangible change in the lives of children in 
+              undeserved communities by providing educational materials for learning. We partner
+            with donor organizations in a bid to increase awareness of this foundation,thereby
+            supporting these undeserved communities. Our goal is to see that every child has an 
+            oppurtunity to learn.
+            <!-- supporting government -->
+              </p>
+          </div><hr>
+    </div>
   
-      <script src="./project folder/JS/jquery-3.4.1.min.js"></script>
-      <script src="./project folder/JS/bootstrap.js"></script>
+      <script src="project folder/JS/jquery-3.4.1.min.js"></script>
+      <script src="project folder/JS/bootstrap.js"></script>
       
-</body>
+  </body>
 </html>
