Broken Nav link

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                           <a class="nav-item nav-link active" href="#">About
                               <span class="sr-only">(current)</span>
                           </a>
-                          <a class="nav-item nav-link" href="Contact.html">Contact</a><form class="form-inline my-2 my-lg-0">
+                          <a class="nav-item nav-link" href="contact.html">Contact</a><form class="form-inline my-2 my-lg-0">
                           <button class="btn btn-outline-danger my-2 my-sm-0  justify-content-end" type="submit">DONATE</button>
                         </form>
                       </div>
