--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
                       <div class="navbar-nav text-uppercase">  
                     
                                   <a class="nav-item nav-link" href="index.html">Home </a>
-                                  <a class="nav-item nav-link" href="About.html">About</a>
+                                  <a class="nav-item nav-link" href="about.html">About</a>
                                   <a class="nav-item nav-link active" href="#">Contact
                                         <span class="sr-only">(current)</span>
                                   </a><form class="form-inline my-2 my-lg-0">
