--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                   <div class="navbar-nav text-uppercase">  
                 
                               <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                              <a class="nav-item nav-link" href="About.html">About</a>
-                              <a class="nav-item nav-link" href="Contact.html">Contact</a><form class="form-inline my-2 my-lg-0">
+                              <a class="nav-item nav-link" href="about.html">About</a>
+                              <a class="nav-item nav-link" href="contact.html">Contact</a><form class="form-inline my-2 my-lg-0">
                               <button class="btn btn-outline-danger my-2 my-sm-0  justify-content-end" type="submit">DONATE</button>
                             </form>
                           </div>
