--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
               <div class="display-2 text-center text-primary"> <h3>About us</h3> </div>
                 <br />
               <img src="imgesS/sharing books.jpg" alt="" height="400px" width="1000px">
-              <p div class="container">
+              <p div class="container lead">
                 EDUFIRST is poised to bringing about tangible change in the lives of children in 
               undeserved communities by providing educational materials for learning. We partner
             with donor organizations in a bid to increase awareness of this foundation,thereby
@@ -50,8 +50,8 @@
           </div><hr>
     </div>
   
-      <script src="project folder/JS/jquery-3.4.1.min.js"></script>
-      <script src="project folder/JS/bootstrap.js"></script>
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="bootstrap4/js/bootstrap.js"></script>
       
   </body>
 </html>
