--- a/contact.html
+++ b/contact.html
@@ -84,9 +84,8 @@
         </div>
     </div>
 
-              <script src="./project folder/JS/jquery-3.4.1.min.js"></script>
-              <script src="./project folder/JS/bootstrap.js"></script>
-           
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="bootstrap4/js/bootstrap.js"></script>
     
 </body>
 </html>
