--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class=" col-auto card text-center">
                         <div class="card-body">
                             <h2 class="card-title" style="font-style: italic">Education</h2>
-                        <p class="card-title">Education is the most powerful weapon in fighting poverty.<br /> EDUFIRST provides
+                        <p class="card-title lead">Education is the most powerful weapon in fighting poverty.<br /> EDUFIRST provides
                           educational relief materials to children irrespective of who they are,and where
                          and where they live in undeserved communities.
                       </p>
@@ -62,7 +62,7 @@
 
         <div class="container2">
             <h2 class=""> The Challenge</h2><hr>
-            <p> According to UNICEF, about 10.5 million children are out of school due to educational provision
+            <p class="lead"> According to UNICEF, about 10.5 million children are out of school due to educational provision
               in predominantly rural areas. Some of the reason for this high statistics is lack of basic infrastructures,teaching aids,textbooks are responsible
             </p>
             <br />
@@ -88,7 +88,7 @@
                   <div class="description2">
                       <section>
                               <h3 style="font-style: italic">Solution</h3> <hr>
-                              <p>EDUFIRST partners with donor organizations to solve educational problems in undeserved communities.
+                              <p class="lead">EDUFIRST partners with donor organizations to solve educational problems in undeserved communities.
                                    <!-- we need to insert pics showing educational materials -->
                               </p>
                             <div class="">    
@@ -104,7 +104,7 @@
                 <section>
                   <button:submit><h5>BECOME A DONOR</h5></button>
                   <br />
-                <p>Support our ongoing Outreach</p>
+                <p class="lead">Support our ongoing Outreach</p>
                 <br />
       
                    </section>
